--- a/iaz/templates/Theme/General/Template/Menu/footer.html.twig
+++ b/iaz/templates/Theme/General/Template/Menu/footer.html.twig
@@ -82,7 +82,7 @@
 			Carrefour Kameni,<br>
 			Biyem-assi
 		  </address>
-		  <a href=""><span class="place"><i class="fa fa-map-marker"></i>Le campus</span></a>
+		  <a href="https://www.google.com/maps/place/INSTITUT+DE+FORMATION+PROFESSIONNELLE+AZ+CORPORATION/@3.8480024,11.4905662,15z/data=!4m2!3m1!1s0x0:0xe9ed2f8954b445f6?sa=X&ved=2ahUKEwjvt96Y66CEAxWkVUEAHS2tCmsQ_BJ6BAgPEAA"><span class="place"><i class="fa fa-map-marker"></i>Itinéraire du campus AZ Corporation</span></a>
 		</div>
 	  </div><!-- col-sm-3 col-xs-6 -->
 
