--- a/iaz/templates/Theme/Produit/Service/Service/aproposdenous.html.twig
+++ b/iaz/templates/Theme/Produit/Service/Service/aproposdenous.html.twig
@@ -17,394 +17,394 @@
 {{ parent() }}
 
 <style>
-.card {
-  display: flex;
-  margin-bottom: 30px;
-  width: 100%;
-  background-color: #fff;
-}
-.card .card-icon-top {
-  font-size: 4.5rem;
-  margin-top: 3rem;
-}
-.card .card-tags {
-  color: #097d6c;
-  display: inline-block;
-  font-weight: 700;
-  margin-bottom: 1rem;
-}
-.card .card-tags:before {
-  content: "";
-  background-color: #097d6c;
-  width: 0.75em;
-  height: 0.75em;
-  border-radius: 100%;
-  display: inline-block;
-  margin-right: 0.5rem;
-}
-.card .card-date {
-  display: inline-block;
-  padding-bottom: 1rem;
-}
-.card .card-title {
-  color: #212529;
-  display: block;
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 1.33333;
-  margin-bottom: 1rem;
-}
-.card .card-title:last-child {
-  margin-bottom: 0;
-}
-.card .card-label {
-  color: #212529;
-  display: block;
-  font-size: 1.5rem;
-  line-height: 1.33333;
-  font-weight: 700;
-}
-.card .card-body {
-  padding: 2rem 2rem 2rem 2rem;
-  align-self: center;
-  width: 100%;
-}
-.card .card-body .popover-wrapper.right {
-  position: absolute;
-  right: 0;
-}
-.card .card-metadata {
-  min-width: 10rem;
-}
-.card .card-footer {
-  border-top: none;
-  padding: 0 2rem 2rem 2rem;
-  background-color: inherit;
-  display: flex;
-  align-items: center;
-}
-.card .card-footer .vfi {
-  color: #097d6c;
-  font-size: 2.5rem;
-  padding-left: 0.5rem;
-}
-.card .vfi {
-  color: #097d6c;
-}
-.card > a {
-  border-bottom: none;
-  color: #637381;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-.card > a:hover,
-.card > a:active {
-  color: #fff;
-  background: #097d6c;
-  text-decoration: none;
-}
-.card > a:hover .card-title,
-.card > a:hover .card-icon-top,
-.card > a:hover .card-footer .vfi,
-.card > a:hover .card-tags,
-.card > a:active .card-title,
-.card > a:active .card-icon-top,
-.card > a:active .card-footer .vfi,
-.card > a:active .card-tags {
-  color: #fff;
-}
-.card > a:hover .text-muted,
-.card > a:active .text-muted {
-  color: #fff !important;
-}
-.card > a:hover .card-tags:before,
-.card > a:active .card-tags:before {
-  background-color: #fff;
-}
-.card2 {
-  -webkit-transition: all 100ms ease-in-out;
-  transition: all 100ms ease-in-out;
-  border: none;
-  -webkit-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
-}
-.card2:hover {
-  transform: scale(1.04);
-  border: none;
-}
-.card2 > a:hover,
-.card2 > a:active {
-  color: inherit;
-  background: #fff;
-  text-decoration: none;
-}
-.card2 > a:hover .card-icon-top,
-.card2 > a:hover .card-footer .vfi,
-.card2 > a:hover .card-tags,
-.card2 > a:active .card-icon-top,
-.card2 > a:active .card-footer .vfi,
-.card2 > a:active .card-tags {
-  color: inherit;
-}
-.card2 > a:hover .card-title,
-.card2 > a:active .card-title {
-  color: #097d6c;
-}
-.card2 > a:hover .text-muted,
-.card2 > a:active .text-muted {
-  color: #fff !important;
-}
-.card2 > a:hover .card-tags:before,
-.card2 > a:active .card-tags:before {
-  background-color: #fff;
-}
-.card3 {
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-.card3:hover {
-  border: 1px solid #0cb097;
-}
-.card3 > a:hover,
-.card3 > a:active {
-  color: inherit;
-  background: #fff;
-  text-decoration: none;
-}
-.card3 > a:hover .card-icon-top,
-.card3 > a:hover .card-footer .vfi,
-.card3 > a:hover .card-tags,
-.card3 > a:active .card-icon-top,
-.card3 > a:active .card-footer .vfi,
-.card3 > a:active .card-tags {
-  color: inherit;
-}
-.card3 > a:hover .card-title,
-.card3 > a:active .card-title {
-  color: #212529;
-}
-.card3 > a .card-icon-top,
-.card3 > a .card-icon-top {
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-.card3 > a:hover .card-icon-top,
-.card3 > a:active .card-icon-top {
-  transform: scale(1.4);
-}
-.card3 > a:hover .text-muted,
-.card3 > a:active .text-muted {
-  color: #fff !important;
-}
-.card3 > a:hover .card-tags:before,
-.card3 > a:active .card-tags:before {
-  background-color: #fff;
-}
-.card4 {
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  border: 0;
-  -webkit-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
-}
-.card4 > a:hover,
-.card4 > a:active {
-  background: #ffffff;
-  color: inherit;
-  text-decoration: none;
-  cursor: url(https://dl.dropbox.com/s/2nmb5ja0g888q8n/arrow.png) 0 0, auto;
-}
-.card4 > a:hover:before,
-.card4 > a:active:before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  position: absolute;
-}
-.card4 > a:hover .card-icon-top,
-.card4 > a:hover .card-footer .vfi,
-.card4 > a:hover .card-tags,
-.card4 > a:active .card-icon-top,
-.card4 > a:active .card-footer .vfi,
-.card4 > a:active .card-tags {
-  color: inherit;
-}
-.card4 > a:hover .card-title,
-.card4 > a:active .card-title {
-  color: #212529;
-}
-.card4 > a .card-icon-top,
-.card4 > a .card-icon-top {
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-.card4 > a:hover .text-muted,
-.card4 > a:active .text-muted {
-  color: #fff !important;
-}
-.card4 > a:hover .card-tags:before,
-.card4 > a:active .card-tags:before {
-  background-color: #fff;
-}
-.card.card-row-layout .card-body {
-  text-align: left;
-}
-@media (min-width: 992px) {
-  .card.card-row-layout {
-    flex-direction: row;
+  .card {
+    display: flex;
+    margin-bottom: 30px;
+    width: 100%;
+    background-color: #fff;
+  }
+  .card .card-icon-top {
+    font-size: 4.5rem;
+    margin-top: 3rem;
+  }
+  .card .card-tags {
+    color: #097d6c;
+    display: inline-block;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+  .card .card-tags:before {
+    content: "";
+    background-color: #097d6c;
+    width: 0.75em;
+    height: 0.75em;
+    border-radius: 100%;
+    display: inline-block;
+    margin-right: 0.5rem;
+  }
+  .card .card-date {
+    display: inline-block;
+    padding-bottom: 1rem;
+  }
+  .card .card-title {
+    color: #212529;
+    display: block;
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 1.33333;
+    margin-bottom: 1rem;
+  }
+  .card .card-title:last-child {
+    margin-bottom: 0;
+  }
+  .card .card-label {
+    color: #212529;
+    display: block;
+    font-size: 1.5rem;
+    line-height: 1.33333;
+    font-weight: 700;
+  }
+  .card .card-body {
+    padding: 2rem 2rem 2rem 2rem;
+    align-self: center;
+    width: 100%;
+  }
+  .card .card-body .popover-wrapper.right {
+    position: absolute;
+    right: 0;
+  }
+  .card .card-metadata {
+    min-width: 10rem;
+  }
+  .card .card-footer {
+    border-top: none;
+    padding: 0 2rem 2rem 2rem;
+    background-color: inherit;
+    display: flex;
     align-items: center;
   }
-  .card.card-row-layout .card-icon-top {
-    margin-top: 0;
-    margin-left: 2rem;
+  .card .card-footer .vfi {
+    color: #097d6c;
+    font-size: 2.5rem;
+    padding-left: 0.5rem;
   }
-  .card.card-row-layout .card-icon-top.card-icon-right {
-    order: 100;
-    margin-right: 2rem;
+  .card .vfi {
+    color: #097d6c;
+  }
+  .card > a {
+    border-bottom: none;
+    color: #637381;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .card > a:hover,
+  .card > a:active {
+    color: #fff;
+    background: #097d6c;
+    text-decoration: none;
+  }
+  .card > a:hover .card-title,
+  .card > a:hover .card-icon-top,
+  .card > a:hover .card-footer .vfi,
+  .card > a:hover .card-tags,
+  .card > a:active .card-title,
+  .card > a:active .card-icon-top,
+  .card > a:active .card-footer .vfi,
+  .card > a:active .card-tags {
+    color: #fff;
+  }
+  .card > a:hover .text-muted,
+  .card > a:active .text-muted {
+    color: #fff !important;
+  }
+  .card > a:hover .card-tags:before,
+  .card > a:active .card-tags:before {
+    background-color: #fff;
+  }
+  .card2 {
+    -webkit-transition: all 100ms ease-in-out;
+    transition: all 100ms ease-in-out;
+    border: none;
+    -webkit-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
+  }
+  .card2:hover {
+    transform: scale(1.04);
+    border: none;
+  }
+  .card2 > a:hover,
+  .card2 > a:active {
+    color: inherit;
+    background: #fff;
+    text-decoration: none;
+  }
+  .card2 > a:hover .card-icon-top,
+  .card2 > a:hover .card-footer .vfi,
+  .card2 > a:hover .card-tags,
+  .card2 > a:active .card-icon-top,
+  .card2 > a:active .card-footer .vfi,
+  .card2 > a:active .card-tags {
+    color: inherit;
+  }
+  .card2 > a:hover .card-title,
+  .card2 > a:active .card-title {
+    color: #097d6c;
+  }
+  .card2 > a:hover .text-muted,
+  .card2 > a:active .text-muted {
+    color: #fff !important;
+  }
+  .card2 > a:hover .card-tags:before,
+  .card2 > a:active .card-tags:before {
+    background-color: #fff;
+  }
+  .card3 {
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+  }
+  .card3:hover {
+    border: 1px solid #0cb097;
+  }
+  .card3 > a:hover,
+  .card3 > a:active {
+    color: inherit;
+    background: #fff;
+    text-decoration: none;
+  }
+  .card3 > a:hover .card-icon-top,
+  .card3 > a:hover .card-footer .vfi,
+  .card3 > a:hover .card-tags,
+  .card3 > a:active .card-icon-top,
+  .card3 > a:active .card-footer .vfi,
+  .card3 > a:active .card-tags {
+    color: inherit;
+  }
+  .card3 > a:hover .card-title,
+  .card3 > a:active .card-title {
+    color: #212529;
+  }
+  .card3 > a .card-icon-top,
+  .card3 > a .card-icon-top {
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+  }
+  .card3 > a:hover .card-icon-top,
+  .card3 > a:active .card-icon-top {
+    transform: scale(1.4);
+  }
+  .card3 > a:hover .text-muted,
+  .card3 > a:active .text-muted {
+    color: #fff !important;
+  }
+  .card3 > a:hover .card-tags:before,
+  .card3 > a:active .card-tags:before {
+    background-color: #fff;
+  }
+  .card4 {
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+    border: 0;
+    -webkit-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05);
+  }
+  .card4 > a:hover,
+  .card4 > a:active {
+    background: #ffffff;
+    color: inherit;
+    text-decoration: none;
+    cursor: url(https://dl.dropbox.com/s/2nmb5ja0g888q8n/arrow.png) 0 0, auto;
+  }
+  .card4 > a:hover:before,
+  .card4 > a:active:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    position: absolute;
+  }
+  .card4 > a:hover .card-icon-top,
+  .card4 > a:hover .card-footer .vfi,
+  .card4 > a:hover .card-tags,
+  .card4 > a:active .card-icon-top,
+  .card4 > a:active .card-footer .vfi,
+  .card4 > a:active .card-tags {
+    color: inherit;
+  }
+  .card4 > a:hover .card-title,
+  .card4 > a:active .card-title {
+    color: #212529;
+  }
+  .card4 > a .card-icon-top,
+  .card4 > a .card-icon-top {
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+  }
+  .card4 > a:hover .text-muted,
+  .card4 > a:active .text-muted {
+    color: #fff !important;
+  }
+  .card4 > a:hover .card-tags:before,
+  .card4 > a:active .card-tags:before {
+    background-color: #fff;
   }
   .card.card-row-layout .card-body {
     text-align: left;
   }
-  .card.card-row-layout .card-footer {
-    padding: 2rem;
+  @media (min-width: 992px) {
+    .card.card-row-layout {
+      flex-direction: row;
+      align-items: center;
+    }
+    .card.card-row-layout .card-icon-top {
+      margin-top: 0;
+      margin-left: 2rem;
+    }
+    .card.card-row-layout .card-icon-top.card-icon-right {
+      order: 100;
+      margin-right: 2rem;
+    }
+    .card.card-row-layout .card-body {
+      text-align: left;
+    }
+    .card.card-row-layout .card-footer {
+      padding: 2rem;
+    }
+    .card.card-row-layout .card-footer .vfi {
+      font-size: 3.6rem;
+    }
+    .card.card-row-layout > a {
+      flex-direction: row;
+      align-items: center;
+      width: 100%;
+    }
   }
-  .card.card-row-layout .card-footer .vfi {
-    font-size: 3.6rem;
+  .card.card-large .card-title,
+  .card.card-featured .card-title {
+    color: #212529;
+    display: block;
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 1.33333;
   }
-  .card.card-row-layout > a {
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-  }
-}
-.card.card-large .card-title,
-.card.card-featured .card-title {
-  color: #212529;
-  display: block;
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 1.33333;
-}
-.card.card-large .card-body,
-.card.card-featured .card-body {
-  text-align: left;
-}
-@media (min-width: 992px) {
-  .card.card-fw .card-img-top {
-    margin-left: 1rem;
-    max-width: 300px;
-    order: 100;
-  }
-}
-.card.card-large.card-row-layout .card-body {
-  text-align: center;
-}
-@media (min-width: 992px) {
-  .card.card-large.card-row-layout .card-body {
+  .card.card-large .card-body,
+  .card.card-featured .card-body {
     text-align: left;
   }
-}
-@media (min-width: 992px) {
-  .card.card-large.card-fw .card-img-top {
-    margin-left: 1rem;
-    max-width: 400px;
-    order: 100;
+  @media (min-width: 992px) {
+    .card.card-fw .card-img-top {
+      margin-left: 1rem;
+      max-width: 300px;
+      order: 100;
+    }
   }
-  .card.card-large.card-fw .vfi {
-    color: #fff;
+  .card.card-large.card-row-layout .card-body {
+    text-align: center;
   }
-}
-@media (min-width: 1200px) {
-  .card.card-large.card-fw .card-img-top {
-    max-width: 500px;
+  @media (min-width: 992px) {
+    .card.card-large.card-row-layout .card-body {
+      text-align: left;
+    }
   }
-}
-.card.card-featured .card-body .text-muted {
-  display: inline-block;
-  margin-bottom: 1.5rem;
-}
-.card.card-featured .card-body .card-footer {
-  padding: 0;
-}
-@media (min-width: 992px) {
-  .card.card-featured .card-img-top {
-    flex: 0 0 50%;
-    max-width: 50%;
-    margin: 0;
-    align-self: start;
+  @media (min-width: 992px) {
+    .card.card-large.card-fw .card-img-top {
+      margin-left: 1rem;
+      max-width: 400px;
+      order: 100;
+    }
+    .card.card-large.card-fw .vfi {
+      color: #fff;
+    }
   }
-  .card.card-featured .card-body {
-    display: flex;
-    flex-flow: column nowrap;
-    height: 100%;
+  @media (min-width: 1200px) {
+    .card.card-large.card-fw .card-img-top {
+      max-width: 500px;
+    }
+  }
+  .card.card-featured .card-body .text-muted {
+    display: inline-block;
+    margin-bottom: 1.5rem;
   }
   .card.card-featured .card-body .card-footer {
-    margin-top: auto;
+    padding: 0;
   }
-}
-.card.card-label-content .card-title {
-  font-weight: 700;
-}
-.card.card-label-content .card-label {
-  font-size: 1rem;
-}
-.card .rounded-circle {
-  margin: 2rem auto 1rem auto;
-  width: 61.5%;
-}
-.card[data-toggle="modal"] {
-  cursor: pointer;
-}
-.cards > div,
-.cards .card-item {
-  display: flex;
-}
-.cards .card.bg-gray-sky {
-  border: none;
-}
-.cards.bg-gray-sky {
-  background-color: transparent;
-}
-.cards.bg-gray-sky .card {
-  background-color: #f4f6f8;
-  border: none;
-}
-.cards.bg-gray-sky .card .vfi {
-  color: #097d6c;
-}
-.cards.bg-gray-sky .card a:hover .vfi {
-  color: #fff;
-}
-.cards.cards-bs-grid {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.cards.cards-bs-grid .card-item {
-  position: relative;
-  width: 100%;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
-  flex: 0 0 100%;
-  max-width: 100%;
-}
-@media (min-width: 768px) {
+  @media (min-width: 992px) {
+    .card.card-featured .card-img-top {
+      flex: 0 0 50%;
+      max-width: 50%;
+      margin: 0;
+      align-self: start;
+    }
+    .card.card-featured .card-body {
+      display: flex;
+      flex-flow: column nowrap;
+      height: 100%;
+    }
+    .card.card-featured .card-body .card-footer {
+      margin-top: auto;
+    }
+  }
+  .card.card-label-content .card-title {
+    font-weight: 700;
+  }
+  .card.card-label-content .card-label {
+    font-size: 1rem;
+  }
+  .card .rounded-circle {
+    margin: 2rem auto 1rem auto;
+    width: 61.5%;
+  }
+  .card[data-toggle="modal"] {
+    cursor: pointer;
+  }
+  .cards > div,
+  .cards .card-item {
+    display: flex;
+  }
+  .cards .card.bg-gray-sky {
+    border: none;
+  }
+  .cards.bg-gray-sky {
+    background-color: transparent;
+  }
+  .cards.bg-gray-sky .card {
+    background-color: #f4f6f8;
+    border: none;
+  }
+  .cards.bg-gray-sky .card .vfi {
+    color: #097d6c;
+  }
+  .cards.bg-gray-sky .card a:hover .vfi {
+    color: #fff;
+  }
+  .cards.cards-bs-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
   .cards.cards-bs-grid .card-item {
-    flex: 0 0 50%;
-    max-width: 50%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    flex: 0 0 100%;
+    max-width: 100%;
   }
-}
-@media (min-width: 992px) {
-  .cards.cards-bs-grid .card-item {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
+  @media (min-width: 768px) {
+    .cards.cards-bs-grid .card-item {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
   }
-}
+  @media (min-width: 992px) {
+    .cards.cards-bs-grid .card-item {
+      flex: 0 0 33.33333%;
+      max-width: 33.33333%;
+    }
+  }
 </style>
 {% endblock %}
 
@@ -413,50 +413,50 @@
 <link rel="stylesheet" href="{{ asset('template/css/jquery.expandable.css') }}">
 <script type="text/javascript" src="{{ asset('template/js/jquery.expandable.js') }}"></script>
 <style>
-.cool-link {
-  display: inline-block;
-  color: #000;
-  text-decoration: none;
-}
+  .cool-link {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+  }
 
-.cool-link::after {
-  content: '';
-  display: block;
-  width: 0;
-  height: 2px;
-  background: #000;
-  transition: width .3s;
-}
-
-.cool-link:hover::after {
-  width: 100%;
-}
-
-
-
-.welcome_area_thumb .video_btn .video-sonar::before {
-    position: absolute;
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.7);
+  .cool-link::after {
     content: '';
-    top: -15px;
-    left: -15px;
-    z-index: -100;
-}
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #000;
+    transition: width .3s;
+  }
 
-.welcome_area_thumb .video_btn .video-sonar::after {
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    content: '';
-    top: -10px;
-    left: -10px;
-    z-index: -50;
-}
+  .cool-link:hover::after {
+    width: 100%;
+  }
+
+
+
+  .welcome_area_thumb .video_btn .video-sonar::before {
+      position: absolute;
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.7);
+      content: '';
+      top: -15px;
+      left: -15px;
+      z-index: -100;
+  }
+
+  .welcome_area_thumb .video_btn .video-sonar::after {
+      position: absolute;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background-color: #ffffff;
+      content: '';
+      top: -10px;
+      left: -10px;
+      z-index: -50;
+  }
 </style>
 
 
@@ -537,6 +537,8 @@
 		
     {% if position == 'evenement' %}
     <li>Nos évènements</li>
+    {% elseif(position == 'planingcours') %}
+    <li>Dépliants et planning des cours</li>
     {% endif %}
 
 		{% if article != null %}
